Fix login issue and update error page design
- Unauthorized users will now have their session cleared and will return to the previous page; previously, unauthorized users were redirected to an empty dasboard page
- Add padding to and decrease line height in error message area; previously, the error message would be spaced out too much for a multi-line message

--- a/static/assets/css/error.css
+++ b/static/assets/css/error.css
@@ -8,6 +8,7 @@ h1#error_code {
 	font-weight: 400;
 	margin: 0;
 	padding: 0;
+	text-align: center;
 }
 
 h2#return_home {
@@ -15,10 +16,16 @@ h2#return_home {
 	font-size: 28px;
 	font-weight: 300;
 	margin: 0;
+	line-height: 1.5;
+	padding: 20px 0;
+	text-align: center;
 }
 
-a#turnAround {
-	margin-top: 30px;
+div#turnAround {
+	text-align: center;
+}
+
+div#turnAround a {
 	font-family: 'Roboto', sans-serif;
 	font-size: 18px;
 	font-weight: 600;
